--- a/Carpool-addim/app/src/main/res/layout/case_in.xml
+++ b/Carpool-addim/app/src/main/res/layout/case_in.xml
@@ -6,15 +6,15 @@
     <ImageView
         android:layout_margin="10dp"
         android:src="@drawable/head_small"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/imageView" android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
     <TextView
         android:textColor="@color/textColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:textSize="22dp"
+        android:textSize="15dp"
         android:id="@+id/case_in_name" android:layout_alignTop="@+id/imageView"
         android:layout_toEndOf="@+id/imageView"/>
     <TextView
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:textSize="22dp"
+        android:textSize="15dp"
         android:id="@+id/case_in_phone" android:layout_alignBottom="@+id/imageView"
         android:layout_toEndOf="@+id/imageView"/>
     <Button
@@ -30,9 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="私聊"
-        android:textSize="30dp"
-        android:layout_marginTop="10dp"
+        android:textSize="20dp"
         android:layout_alignParentRight="true"
-        android:background="@color/top"
         android:focusable="false"/>
 </RelativeLayout>
