--- a/Carpool-addim/app/src/main/res/layout/fragment_my_have.xml
+++ b/Carpool-addim/app/src/main/res/layout/fragment_my_have.xml
@@ -7,7 +7,8 @@
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#EAEAEA">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
